--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
 This is an experiment in using Lean 4 as a general purpose programming language.
 
 * Sample Output
-  [[./img.ppm]]
+  [[./examples/trace.png]]
